[package]
name = "alarms_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
clap = "4.3.21"
clap_derive = "4.3.12"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
serde = "1.0.183"
serde_derive = "1.0.183"
